# mc-server-manager

./: .gitignore  AGENTS.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  msix.yml  release.yml
src/: App.svelte  index.html  main.ts
src-tauri/: Cargo.toml  Package.appxmanifest  tauri.conf.json
src-tauri/src/: addon.rs  backups.rs  commands.rs  console.rs  db.rs  error.rs  events.rs  lib.rs  main.rs  mods.rs  platform.rs  playerdata.rs  plugins.rs  portforward.rs  process.rs  properties.rs  roster.rs  scheduler.rs  servers.rs  service.rs  settings.rs  sources.rs  state.rs  stats.rs
src-tauri/src/addons/: cache.rs  mod.rs  mods.rs  plugins.rs  sources.rs
src-tauri/src/installers/: arclight.rs  bds.rs  forgelike.rs  mod.rs  mohist.rs  quilt.rs  spigot.rs  vanilla.rs
src-tauri/src/java/: download.rs  mod.rs
src-tauri/src/players/: mod.rs  playerdata.rs  roster.rs
src-tauri/src/process/: console.rs  mod.rs
src-tauri/src/servers/: address.rs  mod.rs  scheduler.rs  service.rs  state.rs  timed_backup.rs
src-tauri/src/storage/: backups.rs  db.rs  files.rs  fsutil.rs  mod.rs  properties.rs  settings.rs
src/lib/: api.ts  commands.test.ts  constants.ts  events.ts  status.ts  theme.css
src/lib/components/: AddonManager.svelte  Button.svelte  Chip.svelte  Confetti.svelte  ConfirmDialog.svelte  ConsoleView.svelte  ContextMenu.svelte  GrassBlock.svelte  Modal.svelte  MotdEditor.svelte  PlayerDetailModal.svelte  ProgressBar.svelte  ReasonPrompt.svelte  ServerCard.svelte  Sparkline.svelte  StatTile.svelte  StatusBlob.svelte  TextPrompt.svelte  Toasts.svelte
src/lib/ipc/: api.test.ts  api.ts  commands.ts  events.ts
src/lib/stores/: backups.svelte.ts  confirm.svelte.ts  contextMenu.svelte.ts  portForward.svelte.ts  reasonPrompt.svelte.ts  serverAddress.svelte.ts  (+5 more)
(+34 files in other folders)
