[package]
name = "mc-server-manager"
version = "1.12.1"
description = "ServerForge — a cute, fast, cross-platform game server manager"
authors = ["Void"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mc_server_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "sync", "time", "fs"] }
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
sha1 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-log = "2"
log = "0.4"
sysinfo = "0.39.6"
zip = "8.6.0"
croner = "3.0.1"
chrono = "0.4.45"
walkdir = "2.5.0"
flate2 = "1.1.9"
fastnbt = "2"
igd-next = { version = "0.16", features = ["aio_tokio"] }
tar = "0.4.46"
sha2 = "0.11.0"
image = "0.25.10"
base64 = "0.22.1"
serde_yaml = "0.9.34"
rusqlite = { version = "0.32", features = ["bundled"] }

# Read the optimization guideline for more details: https://tauri.app/concept/size/#cargo-configuration
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

[target."cfg(windows)".dependencies]
win32job = "2.0.3"
